{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 134,
  "lineage": "f05aaf0c-50e6-17ef-a88d-86dc4cdf2e3e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dev-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/networkInterfaces/dev-nic-0",
            "internal_domain_name_suffix": "ngq0gqgljatu5h1nk0uvorsw3a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-0",
                "subnet_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-D8-40-12",
            "name": "dev-nic-0",
            "private_ip_address": "10.123.1.5",
            "private_ip_addresses": [
              "10.123.1.5"
            ],
            "resource_group_name": "linuxDev",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Compute/virtualMachines/dev-vm-0"
          },
          "dependencies": [
            "azurerm_public_ip.dev-ip",
            "azurerm_resource_group.linux-dev-rg",
            "azurerm_subnet.dev-subnet",
            "azurerm_virtual_network.dev-vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/networkInterfaces/dev-nic-1",
            "internal_domain_name_suffix": "ngq0gqgljatu5h1nk0uvorsw3a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-1",
                "subnet_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-D4-26-DD",
            "name": "dev-nic-1",
            "private_ip_address": "10.123.1.8",
            "private_ip_addresses": [
              "10.123.1.8"
            ],
            "resource_group_name": "linuxDev",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Compute/virtualMachines/dev-vm-1"
          },
          "dependencies": [
            "azurerm_public_ip.dev-ip",
            "azurerm_resource_group.linux-dev-rg",
            "azurerm_subnet.dev-subnet",
            "azurerm_virtual_network.dev-vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/networkInterfaces/dev-nic-2",
            "internal_domain_name_suffix": "ngq0gqgljatu5h1nk0uvorsw3a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-2",
                "subnet_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-FF-DE-5A",
            "name": "dev-nic-2",
            "private_ip_address": "10.123.1.7",
            "private_ip_addresses": [
              "10.123.1.7"
            ],
            "resource_group_name": "linuxDev",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Compute/virtualMachines/dev-vm-2"
          },
          "dependencies": [
            "azurerm_public_ip.dev-ip",
            "azurerm_resource_group.linux-dev-rg",
            "azurerm_subnet.dev-subnet",
            "azurerm_virtual_network.dev-vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/networkInterfaces/dev-nic-3",
            "internal_domain_name_suffix": "ngq0gqgljatu5h1nk0uvorsw3a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-3",
                "subnet_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "7C-1E-52-01-EF-51",
            "name": "dev-nic-3",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "linuxDev",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Compute/virtualMachines/dev-vm-3"
          },
          "dependencies": [
            "azurerm_public_ip.dev-ip",
            "azurerm_resource_group.linux-dev-rg",
            "azurerm_subnet.dev-subnet",
            "azurerm_virtual_network.dev-vnet"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/networkInterfaces/dev-nic-4",
            "internal_domain_name_suffix": "ngq0gqgljatu5h1nk0uvorsw3a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-4",
                "subnet_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-D6-39-34",
            "name": "dev-nic-4",
            "private_ip_address": "10.123.1.6",
            "private_ip_addresses": [
              "10.123.1.6"
            ],
            "resource_group_name": "linuxDev",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Compute/virtualMachines/dev-vm-4"
          },
          "dependencies": [
            "azurerm_public_ip.dev-ip",
            "azurerm_resource_group.linux-dev-rg",
            "azurerm_subnet.dev-subnet",
            "azurerm_virtual_network.dev-vnet"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/networkInterfaces/dev-nic-5",
            "internal_domain_name_suffix": "ngq0gqgljatu5h1nk0uvorsw3a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.13",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-5",
                "subnet_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "name": "dev-nic-5",
            "private_ip_address": "10.123.1.13",
            "private_ip_addresses": [
              "10.123.1.13"
            ],
            "resource_group_name": "linuxDev",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.dev-ip",
            "azurerm_resource_group.linux-dev-rg",
            "azurerm_subnet.dev-subnet",
            "azurerm_virtual_network.dev-vnet"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/networkInterfaces/dev-nic-6",
            "internal_domain_name_suffix": "ngq0gqgljatu5h1nk0uvorsw3a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.11",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-6",
                "subnet_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "name": "dev-nic-6",
            "private_ip_address": "10.123.1.11",
            "private_ip_addresses": [
              "10.123.1.11"
            ],
            "resource_group_name": "linuxDev",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.dev-ip",
            "azurerm_resource_group.linux-dev-rg",
            "azurerm_subnet.dev-subnet",
            "azurerm_virtual_network.dev-vnet"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/networkInterfaces/dev-nic-7",
            "internal_domain_name_suffix": "ngq0gqgljatu5h1nk0uvorsw3a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.10",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-7",
                "subnet_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "name": "dev-nic-7",
            "private_ip_address": "10.123.1.10",
            "private_ip_addresses": [
              "10.123.1.10"
            ],
            "resource_group_name": "linuxDev",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.dev-ip",
            "azurerm_resource_group.linux-dev-rg",
            "azurerm_subnet.dev-subnet",
            "azurerm_virtual_network.dev-vnet"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/networkInterfaces/dev-nic-8",
            "internal_domain_name_suffix": "ngq0gqgljatu5h1nk0uvorsw3a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.9",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-8",
                "subnet_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "name": "dev-nic-8",
            "private_ip_address": "10.123.1.9",
            "private_ip_addresses": [
              "10.123.1.9"
            ],
            "resource_group_name": "linuxDev",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.dev-ip",
            "azurerm_resource_group.linux-dev-rg",
            "azurerm_subnet.dev-subnet",
            "azurerm_virtual_network.dev-vnet"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/networkInterfaces/dev-nic-9",
            "internal_domain_name_suffix": "ngq0gqgljatu5h1nk0uvorsw3a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.12",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-9",
                "subnet_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "name": "dev-nic-9",
            "private_ip_address": "10.123.1.12",
            "private_ip_addresses": [
              "10.123.1.12"
            ],
            "resource_group_name": "linuxDev",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.dev-ip",
            "azurerm_resource_group.linux-dev-rg",
            "azurerm_subnet.dev-subnet",
            "azurerm_virtual_network.dev-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dev-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "location": "eastus",
            "name": "dev-nsg",
            "resource_group_name": "linuxDev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.linux-dev-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/networkSecurityGroups/dev-nsg/securityRules/dev-rule",
            "name": "dev-rule",
            "network_security_group_name": "dev-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "linuxDev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.dev-nsg",
            "azurerm_resource_group.linux-dev-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dev-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.168.183.55",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-ip-0",
            "resource_group_name": "linuxDev",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.linux-dev-rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.168.183.27",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-ip-1",
            "resource_group_name": "linuxDev",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.linux-dev-rg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.168.177.104",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-ip-2",
            "resource_group_name": "linuxDev",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.linux-dev-rg"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.168.180.95",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-ip-3",
            "resource_group_name": "linuxDev",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.linux-dev-rg"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-4",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.168.180.10",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-ip-4",
            "resource_group_name": "linuxDev",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.linux-dev-rg"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-5",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-ip-5",
            "resource_group_name": "linuxDev",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.linux-dev-rg"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-6",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-ip-6",
            "resource_group_name": "linuxDev",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.linux-dev-rg"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-7",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-ip-7",
            "resource_group_name": "linuxDev",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.linux-dev-rg"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-8",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-ip-8",
            "resource_group_name": "linuxDev",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.linux-dev-rg"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/publicIPAddresses/dev-ip-9",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-ip-9",
            "resource_group_name": "linuxDev",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.linux-dev-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dev-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "linuxDev",
            "virtual_network_name": "dev-network"
          },
          "dependencies": [
            "azurerm_resource_group.linux-dev-rg",
            "azurerm_virtual_network.dev-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "dev-nsga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/subnet1",
            "network_security_group_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "subnet_id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.dev-nsg",
            "azurerm_resource_group.linux-dev-rg",
            "azurerm_subnet.dev-subnet",
            "azurerm_virtual_network.dev-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "dev-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "40a3a169-48cb-4f27-9f6d-56a9574656e8",
            "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network",
            "location": "eastus",
            "name": "dev-network",
            "resource_group_name": "linuxDev",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/ff46aedd-3714-4508-9566-642fefdc3b90/resourceGroups/linuxDev/providers/Microsoft.Network/networkSecurityGroups/dev-nsg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.linux-dev-rg"
          ]
        }
      ]
    }
  ]
}